# sdk-rust

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs
.github/workflows/: build.yml
examples/: static-data-client.rs
src/: google.r#type.rs  lib.rs  systemathics.apis.r#type.shared.v1.rs  systemathics.apis.services.corporate_actions.v1.rs  systemathics.apis.services.daily.v1.rs  systemathics.apis.services.daily_analytics.v1.rs  systemathics.apis.services.indices.v1.rs  systemathics.apis.services.intraday.v1.rs  systemathics.apis.services.intraday_analytics.v1.rs  systemathics.apis.services.static_data.v1.rs  systemathics.apis.services.sustainability.v1.rs  systemathics.apis.services.tick.v1.rs  systemathics.apis.services.tick_analytics.v1.rs  systemathics.apis.services.tick_conditions.v1.rs  systemathics.apis.services.topology.v1.rs
src/google/type/: date.proto  dayofweek.proto  timeofday.proto
src/systemathics/apis/services/corporate_actions/v1/: changes.proto  dividends.proto  splits.proto
src/systemathics/apis/services/daily/v1/: daily_bars.proto  daily_prices.proto  daily_vwap.proto
src/systemathics/apis/services/daily_analytics/v1/: daily_bollinger.proto  daily_cma.proto  daily_ema.proto  daily_macd.proto  daily_rsi.proto  daily_sma.proto  daily_volatility.proto
src/systemathics/apis/services/indices/v1/: components.proto
src/systemathics/apis/services/intraday/v1/: intraday_bars.proto  intraday_prices.proto  intraday_vwap.proto
src/systemathics/apis/services/intraday_analytics/v1/: intraday_bollinger.proto  intraday_cma.proto  intraday_ema.proto  intraday_macd.proto  intraday_rsi.proto  intraday_sma.proto  intraday_volatility.proto
src/systemathics/apis/services/static_data/v1/: static_data.proto  static_sector.proto
src/systemathics/apis/services/sustainability/v1/: sustainability.proto
src/systemathics/apis/services/tick/v1/: tick_book.proto  tick_quotes.proto  tick_raw.proto  tick_trades.proto  tick_trades_and_book.proto  tick_updates.proto
(+39 files in other folders)
