[package]
name = "systemathics-apis"
version = "0.1.0"
edition = "2021"
authors = ["Systemathics <contact@systemathics.com>"]
repository = "https://github.com/systemathics/sdk-rust"
keywords = ["ganymede","systemathics","grpc"]
license = "MIT"
readme = "README.md"
description = "Ganymede.cloud rust client."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.10.2", features = ["tls", "prost"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "fs"] }

[build-dependencies]
walkdir = "2"
tonic-build = "0.10.2"
